adding pod file for scan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,10 @@ jobs:
           command: |
             ls -al
             pwd
-            checkov -f /root/project/rendered.yml 
+            checkov -f /root/project/rendered.yml
+
+      - run:
+          name: The third stage
+          command: |
+            ls
+            checkov -f /root/project/pod.yml 
